# exercicio-avaliativo-2-lab

./: cli.py  database.py  pyproject.toml  query.py  teacher_crud.py
